# powerlens

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: create_demo_model.py  demo_light.onnx  demo_mock.py  demo_tensorrt.py  full_showcase.py  generate_readme_plots.py  quickstart.py
examples/showcase_results/: part1_heavy_raw.csv  part1_heavy_summary.csv  part1_light_raw.csv  part1_light_summary.csv  part1_medium_raw.csv  part1_medium_summary.csv  part1_model_comparison.csv  part2_iteration_scaling.csv  part3_sustained_raw.csv  part3_sustained_summary.csv  part3_timeline.csv
experiments/: experiment_log.txt  experiment_log_v2.txt  export_models.py  fp16_vs_fp32.py  generate_paper_figures.py  paper_experiments.py  remaining_log.txt  run_remaining.py  thermal_stress.py  thermal_stress_batch.py  thermal_stress_heavy.py  thermal_stress_max.py
results/: energy_summary.csv  raw_samples.csv
results_modes/: power_modes.csv
results_profile/: energy_summary.csv  raw_samples.csv
results_stress/: energy_summary.csv  raw_samples.csv
results_trt/: energy_summary.csv  raw_samples.csv
showcase_results/: profile_raw.csv  profile_summary.csv
src/powerlens/: __init__.py  __main__.py  cli.py
src/powerlens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/test_analysis/: __init__.py  test_batch_scaling.py  test_energy.py  (+2 more)
(+33 files in other folders)
